# VMLauncher

./: .gitignore  Cargo.toml  README.md  input.yaml  restart_worker.sh  run.sh  run_nes_worker.sh  tcpdump.sh
resources/: dockerdaemon.template  dockerunit.template  networkconfiguration.template  worker_config.template
src/: firecracker.rs  flatcar.rs  main.rs  nanos.rs  nes.rs  network.rs  qemu.rs  shell.rs  templates.rs
src/network/: common.rs  userbridge.rs  usertap.rs
