[package]
name = "TestCaseLauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinytemplate = "1.2.1"
rust-embed = "8.2.0"
async-process = "2.0.1"
serde = { version = "1.0.196", features = ["derive"] }
futures-lite = "2.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

sudo = "0.6.0"