[package]
name = "TestCaseLauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
async-process = "2.0.1"
futures-lite = "2.2.0"
futures = "0.3.30"

# logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Flatcar Butan
serde_yaml = "0.9.32"
serde = { version = "1.0.196", features = ["derive"] }

# templates
tinytemplate = "1.2.1"
rust-embed = "8.2.0"

# Cleaner Template Structs
once_cell = "1.19.0"
ouroboros = "0.18.3"

# random mac addresses
macaddr = "1.0.1"
rand = "0.9.0-alpha.0"

# network utils require root
sudo = "0.6.0"

# util
indoc = "2.0.4"
strum = "0.26.1"
strum_macros = "0.26.1"
tempdir = "0.3.7"
thiserror = "1.0.57"
tracing-error = "0.2.0"


ctrlc = "3.4.2"

async-std = "1.12.0"
itertools = "0.12.1"
ipnet = "2.9.0"

#cli
inquire = "0.6.2"
clap = { version = "4.4.18", features = ["derive"] }
homedir = "0.2.1"

camino = "1.1.6"
which = "6.0.0"
derive_builder = "0.20.0"
serde_json = "1.0.114"
